2003-12-05  Mark McLoughlin  <mark@skynet.ie>

	* schemas/Makefile.am: add desktop_gnome_url_handlers.schemas.

2003-12-04  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs.h:
	Include gnome-vfs-standard-callbacks.h

	* libgnomevfs/gnome-vfs-standard-callbacks.h:
	Add new standard auth callbacks

2003-12-01  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* libgnomevfs/Makefile.am: Install gnome-vfs-enum-types.h

2003-11-29  Murray Cumming  <murrayc@usa.net>
   
   	* libgnomevfs/Makefile.am: Use glib-mkenums to generate
   	the get_type() functions for the gnome-vfs enums. The build file
   	stuff is based on the same stuff in pango.
 	* libgnomevfs/gnome-vfs-uri.[h|cc]: Hand-code a get_type() function
 	for GnomeVFSURIHideOptions because glib-mkenums can not guess the
 	correct get_type() function name.

2003-11-28  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-unix-mounts.c (get_fstab_file) : fix the
	build.

2003-11-28  Niall Power  <niall.power@sun.com>

	* libgnomevfs/gnome-vfs-unix-mounts.c: use VFSTAB macro defn
	to determine fstab path, if defined.
	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c: add "hsfs"
	as a recognized filesystem type for CD-ROM devices. Added 
	autofs detection for Solaris.
	* libgnomevfs/gnome-vfs-volume-ops.c: eject media by using
	device path as the default operand instead of the mount point

2003-11-25  Padraig O'Briain  <padraig.obriain@sun.com>

	* daemon/gnome-vfs-async-daemon.c: Remove underscore from start of
	gnome_vfs_daemon_set_current_daemon_client_call and
	gnome_vfs_daemon_convert_to_corba_file_info

	* daemon/gnome-vfs-daemon-dir-handle.c: Remove underscore from start of
	gnome_vfs_daemon_convert_to_corba_file_info and
	gnome_vfs_daemon_convert_from_corba_file_info

	* daemon/gnome-vfs-daemon-handle.c: Remove underscore from start of
	gnome_vfs_daemon_convert_to_corba_file_info

	* daemon/gnome-vfs-daemon.c: Remove underscore from start of