@@ -1,5 +1,11 @@
 2003-12-05  Mark McLoughlin  <mark@skynet.ie>
 
+	* schemas/desktop_gnome_url_handlers.schemas.in:
+	Add evolution and gnomemeeting as mailto: and callto:
+	handlers.
+
+2003-12-05  Mark McLoughlin  <mark@skynet.ie>
+
 	* schemas/Makefile.am: add desktop_gnome_url_handlers.schemas.
 
 2003-12-04  Alexander Larsson  <alexl@redhat.com>
